# pyautocausal

./: .gitignore  Dockerfile  README.md  descriptive_analysis_graph_requirements.md  docker-compose.yml  pyproject.toml
docs/: design-document.md
pyautocausal/: README.md  pyproject.toml
pyautocausal/examples/data/: README.md  criteo_sample.parquet
pyautocausal/examples/outputs/notebooks/: california_prop99.csv  california_prop99.html  california_prop99.ipynb  minimum_wage.html  minimum_wage.ipynb
pyautocausal/examples/outputs/text/: causal_pipeline_visualization.md  hainmueller_output.txt  ols_stand_output.txt  save_did_output.txt
pyautocausal/examples/scripts/: california_prop99.py  criteo_uplift.py  design.md  minimum_wage.py  test.ipynb
pyautocausal/orchestration/: base.py  condition.py  data_input.py  graph.py  graph_builder.py  node_state.py  nodes.py  pipeline_graph.py  result.py
pyautocausal/persistence/: __init__.py  local_output_handler.py  notebook_export.py  output_config.py  output_handler.py  output_types.py  parameter_mapper.py  type_inference.py  visualizer.py
pyautocausal/pipelines/: cross_sectional_data_pipeline.py  example.py  example_build.py  example_graph.py  library.py  mock_data.py
pyautocausal/pyautocausal/data_cleaner_interface/: autocleaner.py
pyautocausal/pyautocausal/data_cleaning/: __init__.py  autocleaner.py  base.py  example_usage.py  hints.py  planner.py
pyautocausal/pyautocausal/data_cleaning/operations/: __init__.py  categorical_operations.py  duplicate_operations.py  missing_data_operations.py  time_operations.py
pyautocausal/pyautocausal/data_validation/: README.md  __init__.py  base.py  example_usage.py  validator_base.py  validator_node.py
pyautocausal/pyautocausal/data_validation/checks/: __init__.py  basic_checks.py  categorical_checks.py  causal_checks.py  missing_data_checks.py
pyautocausal/pyautocausal/orchestration/: graph.py  node_state.py  nodes.py  run_context.py
pyautocausal/pyautocausal/persistence/: notebook_decorators.py  notebook_export.py  parameter_mapper.py  yaml_codec.py
pyautocausal/pyautocausal/pipelines/: example_graph.py  mock_data.py
pyautocausal/pyautocausal/pipelines/example_graph/: __init__.py  branches.py  core.py  main.py  utils.py
pyautocausal/scripts/: example_graph.yml
pyautocausal/tests/: conftest.py
pyautocausal/tests/data_cleaning/: test_autocleaner.py  test_operations.py  test_planner.py
pyautocausal/tests/data_validation/: test_basic_validation.py  test_causal_checks.py  test_malformed_data_validation.py  test_validator_node.py
pyautocausal/tests/integration/: test_validation_integration.py
pyautocausal/tests/orchestration/: test_node_arguments.py
pyautocausal/tests/persistence/: test_graph_serializer.py  test_notebook_export.py  test_notebook_runner.py  test_parameter_mapper.py  test_serialization.py  test_visualizer.py  test_yaml_codec.py
pyautocausal/tests/pipelines/: test_causal_pipeline.py  test_causal_pipelines.py  test_conditional_execution.py  test_example_graph_execution.py  test_example_graph_refactor.py  test_pipeline_execution.py  test_simple_pipeline.py
pyautocausal_api/: Caddyfile  Dockerfile  README.md  deployment_summary.txt  docker-compose.yml  pyproject.toml
pyautocausal_api/app/: deployed_pipelines.yaml  main.py  worker.py
pyautocausal_api/app/utils/: file_io.py  pipeline_registry.py
pyautocausal_api/local_job_files/inputs/f7f3cdf6-ec53-4b8b-8702-fde1dd9ff83e/: simple_graph_data.csv
pyautocausal_api/local_job_files/outputs/4574c157-6906-42c0-8592-81cfcff2117f/: save_ols_did.txt
pyautocausal_api/local_job_files/outputs/97b198b0-3267-42eb-940d-3e7cf3b3fd53/: save_ols_did.txt
pyautocausal_api/local_job_files/outputs/f7f3cdf6-ec53-4b8b-8702-fde1dd9ff83e/: causal_analysis_notebook.ipynb  save_ols_did.txt
pyautocausal_api/tests/: README.md  conftest.py  test_celery_memory.py  test_main.py  test_pipelines_endpoint.py  test_worker.py
pyautocausal_ui/: README.md  config.js  (+6 more)
(+28 files in other folders)
