[tool.poetry]
name = "pyautocausal"
version = "0.1.0"
description = "An automatic causal inference package for python"
authors = ["Nicholas Topousis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
networkx = "^3.4.2"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
pyarrow = "^18.1.0"
statsmodels = "^0.14.1"
nbformat = "^5.10.4"
scikit-learn = "^1.6.1"
cloudpickle = "^3.0.0"
pyyaml = "^6.0"
linearmodels = "^6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
jupyter = "^1.1.1"
nbconvert = "^7.16.6"
nbclient = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
