[tool.poetry]
name = "pyautocausal"
version = "0.1.0"
description = "An automatic causal inference package for python"
authors = ["Nicholas Topousis", "Yogam Tchokni"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
networkx = "^3.4.2"
pandas = ">=1.1.2"
matplotlib = ">=2.2.3"
pyarrow = "^18.1.0"
statsmodels = "^0.14.1"
nbformat = "^5.10.4"
scikit-learn = "^1.6.1"
pyyaml = "^6.0"
linearmodels = "^6.1"
cloudpickle = "^3.1.1"
cvxpy = ">=1.1.7"
numpy = ">=1.17"
scipy = ">=1.4.1"
jinja2 = ">=2.10"

[tool.poetry.group.io]
optional = true

[tool.poetry.group.io.dependencies]
cloudpickle = "^3.0.0"
ipykernel = "^6.29.5"
linearmodels = "^6.1"
fsspec = {extras = ["http"], version = "^2025.7.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
jupyter = "^1.1.1"
nbconvert = "^7.16.6"
nbclient = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
