[tool.poetry]
name = "pyautocausal_api"
version = "0.1.0"
description = "An api endpoint for running pyautocausal pipelines"
authors = ["Nicholas Topousis <nicktopousis@gmail.com>", "Yogam Tchokni <yogamtchokni@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
celery = {extras = ["memory"], version = "^5.5.2"}
redis = "^4.6.0"
python-multipart = "^0.0.6"
pandas = "^2.0.3"
boto3 = "^1.28.0"

pyautocausal = {path = "../pyautocausal", develop = true}
s3fs = "^2025.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"  # Required for FastAPI TestClient
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::DeprecationWarning"
]
